Corrected the appearence of scrollbar at the bottom

--- a/SecondAssignment/sass/main.scss
+++ b/SecondAssignment/sass/main.scss
@@ -55,13 +55,11 @@
 	font-family: "Kaushan Script", cursive;
 	color: #e2e2e2;
 	text-shadow: 3px 3px 4px orange;
-	font-size: 5.9vw;
+	font-size: 5vw;
 }
-#signuptext
-{
 
 
-}
+
 .footcol
 {
 	border: none;
@@ -96,4 +94,9 @@ p{
 	text-shadow: -3px -3px  orange;
 	
 	
+}
+.container-fluid
+{
+	padding-right: 15px;
+    padding-left: 15px;
 }
